results/phase2_run.log

============================================================
CELL 1
============================================================
OK

============================================================
CELL 3
============================================================
OK

============================================================
CELL 4
============================================================
OK

============================================================
CELL 5
============================================================
OK

============================================================
CELL 6
============================================================
OK

============================================================
CELL 7
============================================================
OK

============================================================
CELL 8
============================================================
OK

============================================================
CELL 9
============================================================
OK

============================================================
CELL 11
============================================================
OK

============================================================
CELL 12
============================================================
OK

============================================================
CELL 13
============================================================
OK

============================================================
CELL 15
============================================================
OK

============================================================
CELL 17
============================================================
OK

============================================================
CELL 18
============================================================
OK

============================================================
CELL 20
============================================================
OK

============================================================
CELL 22
============================================================
OK

============================================================
CELL 24
============================================================
OK

============================================================
CELL 25
============================================================
OK

============================================================
CELL 27
============================================================
OK

============================================================
CELL 29
============================================================
ERROR in cell 29:
Traceback (most recent call last):
  File "C:\Users\Neptun\MA2\ETH_Hackathon_2026_Quandela\run_phase2.py", line 10, in run_cell
    exec(src, namespace)
  File "<string>", line 7
    print("
          ^
SyntaxError: unterminated string literal (detected at line 7)

